// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ServiceOfferingCardBody /> should render correctly 1`] = `
<ServiceOfferingCardBody
  display_name="display name"
  distributor="Red Hat"
  long_description="long description"
  name="Foo"
>
  <Styled(Component)>
    <Component
      className="sc-AxhUy loBGYF"
    >
      <div
        className="pf-c-card__body sc-AxhUy loBGYF"
      >
        <Component>
          <div
            className="pf-c-content"
          >
            <ConditionalLink>
              <Component
                component="h3"
                title="Foo"
              >
                <h3
                  className=""
                  data-pf-content={true}
                  title="Foo"
                >
                  <styled.div>
                    <div
                      className="sc-AxhCb hYKqDj"
                    >
                      Foo
                    </div>
                  </styled.div>
                </h3>
              </Component>
            </ConditionalLink>
            <Component
              component="small"
            >
              <small
                className=""
                data-pf-content={true}
              >
                Red Hat
              </small>
            </Component>
          </div>
        </Component>
        <ItemDetails
          long_description="long description"
          toDisplay={
            Array [
              "long_description",
            ]
          }
        >
          <styled.div
            key="card-prop-long_description"
          >
            <div
              className="sc-AxjAm hDziHm"
            >
              long description
            </div>
          </styled.div>
        </ItemDetails>
      </div>
    </Component>
  </Styled(Component)>
</ServiceOfferingCardBody>
`;

exports[`<ServiceOfferingCardBody /> should render correctly with alternative values 1`] = `
<ServiceOfferingCardBody
  description="Bar"
  name="Foo"
>
  <Styled(Component)>
    <Component
      className="sc-AxhUy loBGYF"
    >
      <div
        className="pf-c-card__body sc-AxhUy loBGYF"
      >
        <Component>
          <div
            className="pf-c-content"
          >
            <ConditionalLink>
              <Component
                component="h3"
                title="Foo"
              >
                <h3
                  className=""
                  data-pf-content={true}
                  title="Foo"
                >
                  <styled.div>
                    <div
                      className="sc-AxhCb hYKqDj"
                    >
                      Foo
                    </div>
                  </styled.div>
                </h3>
              </Component>
            </ConditionalLink>
          </div>
        </Component>
        <ItemDetails
          description="Bar"
          toDisplay={
            Array [
              "description",
            ]
          }
        >
          <styled.div
            key="card-prop-description"
          >
            <div
              className="sc-AxjAm hDziHm"
            >
              Bar
            </div>
          </styled.div>
        </ItemDetails>
      </div>
    </Component>
  </Styled(Component)>
</ServiceOfferingCardBody>
`;
